pust from work space

--- a/KD/Views/Shared/_leftMenu.cshtml
+++ b/KD/Views/Shared/_leftMenu.cshtml
@@ -19,56 +19,66 @@
         </div>
         @*e Header*@
         @*s Menu*@
-        <div class="main-container-menu-left-menu main-scroll-left-menu">
+    <div class="main-container-menu-left-menu main-scroll-left-menu">
 
-            <div href="/" class="main-btn-menu-left-menu main_btn_menu_left_menu_js" main-color-ripple="#43494f80" id="nav_department" main-tooltip-menu>
-                <span class="main-icon"><i class="ri-apps-2-line"></i></span>
-                <span class="main-title">Home</span>
-            </div>
-
-            <div href="/" class="main-btn-menu-left-menu main_btn_menu_left_menu_js" main-color-ripple="#43494f80" id="nav_department" main-tooltip-menu>
-                <span class="main-icon"><i class="ri-dashboard-line"></i></span>
-                <span class="main-title">Dashborad</span>
-            </div>
-
-            <span class="nav-head-menu-title">Settings</span>
-
-            <div href="/Products" class="main-btn-menu-left-menu main_btn_menu_left_menu_js" main-color-ripple="#43494f80" id="active_menu_product_js" main-tooltip-menu>
-                <span class="main-icon"><i class="ri-shopping-bag-2-line"></i></span>
-                <span class="main-title">Products</span>
-            </div>
-
-            <div href="/kd" class="main-btn-menu-left-menu main_btn_menu_left_menu_js" main-color-ripple="#43494f80" id="nav_speaker" main-tooltip-menu>
-                <span class="main-icon"><i class="ri-speaker-line"></i></span>
-                <span class="main-title">Speaker</span>
-            </div>
-
-            <div href="/" class="main-btn-menu-left-menu main_btn_menu_left_menu_js" main-color-ripple="#43494f80" id="nav_address" main-tooltip-menu>
-                <span class="main-icon"><i class="ri-globe-line"></i></span>
-                <span class="main-title">Address</span>
-            </div>
-
-            @*<span class="nav-head-menu-title">Others</span>
-                <div href="/" class="main-btn-menu-left-menu" main-color-ripple="#43494f80" id="nav_address" main-tooltip-menu>
-                    <span class="main-icon"><img src="~/Content/Assets/icon/notification.svg" /></span>
-                    <span class="main-title">Notification</span>
-                    <div class="main-text-count-notification">8</div>
-                </div>
-                <div class="main-btn-menu-left-menu" main-color-ripple="#43494f80" main-tooltip-menu>
-                    <span class="main-icon"><i class="ri-translate"></i></span>
-                    <span class="main-title">Translation</span>
-                </div>
-                <div class="main-btn-menu-left-menu btn_collaps_menu_js" main-color-ripple="#43494f80" id="nav_address" main-tooltip-menu>
-                    <span class="main-icon"><img src="~/Content/Assets/icon/maxLayout.png" /></span>
-                    <span class="main-title">collaps menu</span>
-                </div>
-                <div href="/" class="main-btn-menu-left-menu main_btn_menu_left_menu_js" main-color-ripple="#43494f80" id="nav_address" main-tooltip-menu>
-                    <span class="main-icon"><i class="ri-settings-line"></i></span>
-                    <span class="main-title">Setting</span>
-                </div>*@
-
-
+        <div href="/" class="main-btn-menu-left-menu main_btn_menu_left_menu_js" main-color-ripple="#43494f80" id="nav_department" main-tooltip-menu>
+            <span class="main-icon"><i class="ri-apps-2-line"></i></span>
+            <span class="main-title">Home</span>
         </div>
+
+        <div href="/" class="main-btn-menu-left-menu main_btn_menu_left_menu_js" main-color-ripple="#43494f80" id="nav_department" main-tooltip-menu>
+            <span class="main-icon"><i class="ri-dashboard-line"></i></span>
+            <span class="main-title">Dashborad</span>
+        </div>
+
+        <span class="nav-head-menu-title">Settings</span>
+
+        <div href="/Products" class="main-btn-menu-left-menu main_btn_menu_left_menu_js" main-color-ripple="#43494f80" id="" main-tooltip-menu>
+            <span class="main-icon"><i class="ri-stack-line"></i></span>
+            <span class="main-title">Categories</span>
+        </div>
+
+        <div href="/Products" class="main-btn-menu-left-menu main_btn_menu_left_menu_js" main-color-ripple="#43494f80" id="active_menu_product_js" main-tooltip-menu>
+            <span class="main-icon"><i class="ri-product-hunt-line"></i></span>
+            <span class="main-title">Products</span>
+        </div>
+
+        <div href="/kd" class="main-btn-menu-left-menu main_btn_menu_left_menu_js" main-color-ripple="#43494f80" id="" main-tooltip-menu>
+            <span class="main-icon"><i class="ri-user-3-line"></i></span>
+            <span class="main-title">User</span>
+        </div>
+
+        @*<div href="/kd" class="main-btn-menu-left-menu main_btn_menu_left_menu_js" main-color-ripple="#43494f80" id="nav_speaker" main-tooltip-menu>
+            <span class="main-icon"><i class="ri-speaker-line"></i></span>
+            <span class="main-title">Speaker</span>
+        </div>
+
+        <div href="/" class="main-btn-menu-left-menu main_btn_menu_left_menu_js" main-color-ripple="#43494f80" id="nav_address" main-tooltip-menu>
+            <span class="main-icon"><i class="ri-globe-line"></i></span>
+            <span class="main-title">Address</span>
+        </div>*@
+
+        @*<span class="nav-head-menu-title">Others</span>
+        <div href="/" class="main-btn-menu-left-menu" main-color-ripple="#43494f80" id="nav_address" main-tooltip-menu>
+            <span class="main-icon"><img src="~/Content/Assets/icon/notification.svg" /></span>
+            <span class="main-title">Notification</span>
+            <div class="main-text-count-notification">8</div>
+        </div>
+        <div class="main-btn-menu-left-menu" main-color-ripple="#43494f80" main-tooltip-menu>
+            <span class="main-icon"><i class="ri-translate"></i></span>
+            <span class="main-title">Translation</span>
+        </div>
+        <div class="main-btn-menu-left-menu btn_collaps_menu_js" main-color-ripple="#43494f80" id="nav_address" main-tooltip-menu>
+            <span class="main-icon"><img src="~/Content/Assets/icon/maxLayout.png" /></span>
+            <span class="main-title">collaps menu</span>
+        </div>
+        <div href="/" class="main-btn-menu-left-menu main_btn_menu_left_menu_js" main-color-ripple="#43494f80" id="nav_address" main-tooltip-menu>
+            <span class="main-icon"><i class="ri-settings-line"></i></span>
+            <span class="main-title">Setting</span>
+        </div>*@
+
+
+    </div>
         @*e Menu*@
         @*s Profile*@
         <!--<div class="main-container-profile">
