--- a/KD/Views/Login/Login.cshtml
+++ b/KD/Views/Login/Login.cshtml
@@ -47,8 +47,8 @@
                             <div class="icon-show-password"><span class="ocs-btn-show-password" id="btn_show_password"><i class="ri-eye-off-line"></i></span></div>
                         </div>
                     </div>
-                    <button class="auth-btn auth-btn-login"> <span id="login">ចូលប្រើប្រាស់</span></button>
-                    <button id="btn_forgot_password" class="auth-forgot-pasword ocs-forgot-password"> Forgot Password? </button>
+                    <button class="auth-btn auth-btn-login"> <span id="main_login">ចូលប្រើប្រាស់</span></button>
+                    <button id="btn_forgot_password" class="auth-forgot-pasword ocs-forgot-password"> ភ្លេចពាក្យសម្ងាត់ ?</button>
                 </div>
 
             </div>
