has been update style side bar and side view

--- a/KD/Content/Main/main.scss
+++ b/KD/Content/Main/main.scss
@@ -3,11 +3,11 @@
 @import "./loading";
 @import "./_responsive";
 @import "./mainLayOut";
-@import "./_contentMenu";
-@import "./_contentView";
+@import "./_menu";
+@import "./_sideView";
 @import "./_contentRightDialog";
 @import "./_formInput";
-@import "./_mainToHeader";
+@import "./_Header";
 @import "./buttons";
 @import "./actionRipple";
 @import "./modal";
