--- a/KD/Content/Plugins/jQueryNiceSelect/scss/style.css
+++ b/KD/Content/Plugins/jQueryNiceSelect/scss/style.css
@@ -3,8 +3,7 @@
   background-color: #fff;
   border-radius: 5px;
   border: solid 1px #e0e7ee;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   clear: both;
   cursor: pointer;
   display: block;
@@ -19,28 +18,23 @@
   padding-right: 30px;
   position: relative;
   text-align: left !important;
-  -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
   -webkit-user-select: none;
      -moz-user-select: none;
-      -ms-user-select: none;
           user-select: none;
   white-space: nowrap;
   width: auto;
 }
-
 .nice-select:hover {
   border-color: #d0dae5;
 }
-
 .nice-select:active, .nice-select.open, .nice-select:focus {
   border-color: #88bfff;
 }
-
 .nice-select:after {
   border-bottom: 2px solid #90a1b5;
   border-right: 2px solid #90a1b5;
-  content: '';
+  content: "";
   display: block;
   height: 5px;
   margin-top: -4px;
@@ -48,78 +42,59 @@
   position: absolute;
   right: 12px;
   top: 50%;
-  -webkit-transform-origin: 66% 66%;
-          transform-origin: 66% 66%;
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
-  -webkit-transition: all 0.15s ease-in-out;
+  transform-origin: 66% 66%;
+  transform: rotate(45deg);
   transition: all 0.15s ease-in-out;
   width: 5px;
 }
-
 .nice-select.open:after {
-  -webkit-transform: rotate(-135deg);
-          transform: rotate(-135deg);
+  transform: rotate(-135deg);
 }
-
 .nice-select.open .list {
   opacity: 1;
   pointer-events: auto;
-  -webkit-transform: scale(1) translateY(0);
-          transform: scale(1) translateY(0);
+  transform: scale(1) translateY(0);
 }
-
 .nice-select.disabled {
   border-color: #e7ecf2;
   color: #90a1b5;
   pointer-events: none;
 }
-
 .nice-select.disabled:after {
   border-color: #cdd5de;
 }
-
 .nice-select.wide {
   width: 100%;
 }
-
 .nice-select.wide .list {
   left: 0 !important;
   right: 0 !important;
 }
-
 .nice-select.right {
   float: right;
 }
-
 .nice-select.right .list {
   left: auto;
   right: 0;
 }
-
 .nice-select.small {
   font-size: 12px;
   height: 36px;
   line-height: 34px;
 }
-
 .nice-select.small:after {
   height: 4px;
   width: 4px;
 }
-
 .nice-select.small .option {
   line-height: 34px;
   min-height: 34px;
 }
-
 .nice-select .list {
   background-color: #fff;
   border-radius: 5px;
-  -webkit-box-shadow: 0 0 0 1px rgba(68, 88, 112, 0.11);
-          box-shadow: 0 0 0 1px rgba(68, 88, 112, 0.11);
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-shadow: 0 0 0 1px rgba(68, 88, 112, 0.11);
+  box-sizing: border-box;
   margin-top: 4px;
   opacity: 0;
   overflow: hidden;
@@ -128,19 +103,14 @@
   position: absolute;
   top: 100%;
   left: 0;
-  -webkit-transform-origin: 50% 0;
-          transform-origin: 50% 0;
-  -webkit-transform: scale(0.75) translateY(-21px);
-          transform: scale(0.75) translateY(-21px);
-  -webkit-transition: all 0.2s cubic-bezier(0.5, 0, 0, 1.25), opacity 0.15s ease-out;
+  transform-origin: 50% 0;
+  transform: scale(0.75) translateY(-21px);
   transition: all 0.2s cubic-bezier(0.5, 0, 0, 1.25), opacity 0.15s ease-out;
   z-index: 9;
 }
-
 .nice-select .list:hover .option:not(:hover) {
   background-color: transparent !important;
 }
-
 .nice-select .option {
   cursor: pointer;
   font-weight: 400;
@@ -151,18 +121,14 @@
   padding-left: 18px;
   padding-right: 29px;
   text-align: left;
-  -webkit-transition: all 0.2s;
   transition: all 0.2s;
 }
-
 .nice-select .option:hover, .nice-select .option.focus, .nice-select .option.selected.focus {
   background-color: #f6f7f9;
 }
-
 .nice-select .option.selected {
   font-weight: bold;
 }
-
 .nice-select .option.disabled {
   background-color: transparent;
   color: #90a1b5;
@@ -172,17 +138,15 @@
 .no-csspointerevents .nice-select .list {
   display: none;
 }
-
 .no-csspointerevents .nice-select.open .list {
   display: block;
 }
 
-code[class*="language-"],
-pre[class*="language-"] {
+code[class*=language-],
+pre[class*=language-] {
   border-radius: 2px;
   color: #445870;
   -webkit-hyphens: none;
-      -ms-hyphens: none;
           hyphens: none;
   line-height: 1.5;
   -moz-tab-size: 4;
@@ -200,19 +164,19 @@ pre[class*="language-"] {
 }
 
 /* Code blocks */
-pre[class*="language-"] {
+pre[class*=language-] {
   padding: 18px 24px;
   margin: 0 0 24px;
   overflow: auto;
 }
 
-:not(pre) > code[class*="language-"],
-pre[class*="language-"] {
+:not(pre) > code[class*=language-],
+pre[class*=language-] {
   background: #f6f7f9;
 }
 
 /* Inline code */
-:not(pre) > code[class*="language-"] {
+:not(pre) > code[class*=language-] {
   padding: 0 2px 1px;
 }
 
@@ -228,7 +192,7 @@ pre[class*="language-"] {
 }
 
 .namespace {
-  opacity: .7;
+  opacity: 0.7;
 }
 
 .token.property,
@@ -256,7 +220,7 @@ pre[class*="language-"] {
 .language-css .token.string,
 .style .token.string {
   color: #a67f59;
-  background: rgba(255, 255, 255, 0.5);
+  background: hsla(0, 0%, 100%, 0.5);
 }
 
 .token.atrule,
@@ -292,7 +256,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #445870;
-  font-family: 'Work Sans', sans-serif;
+  font-family: "Work Sans", sans-serif;
   font-size: 14px;
   font-weight: normal;
   letter-spacing: -0.25px;
@@ -335,11 +299,9 @@ a:not(.button) {
   color: #55a1fb;
   outline: none;
   text-decoration: none;
-  -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
   border-bottom: 1px solid transparent;
 }
-
 a:not(.button):hover, a:not(.button):focus {
   border-bottom: 1px solid #88bfff;
 }
@@ -363,12 +325,10 @@ a:not(.button):hover, a:not(.button):focus {
   margin-bottom: 30px;
   padding: 24px 30px;
 }
-
 .box:before, .box:after {
   content: "";
   display: table;
 }
-
 .box:after {
   clear: both;
 }
@@ -380,7 +340,6 @@ label {
   text-transform: uppercase;
   float: left;
 }
-
 label.right {
   float: right;
 }
@@ -390,8 +349,7 @@ label.right {
   background-color: #55a1fb;
   border-radius: 5px;
   border: none;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   color: #fff;
   cursor: pointer;
   display: inline-block;
@@ -402,20 +360,16 @@ label.right {
   padding: 0 24px;
   text-align: center;
   text-decoration: none;
-  -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
   white-space: nowrap;
   width: auto;
 }
-
 .button:hover, .button:focus {
   background-color: #4196fb;
 }
-
 .button:active, .button.nice-select.open {
   background-color: #2d8bfa;
 }
-
 .button.light {
   background-color: #fff;
   border: 1px solid #e0e7ee;
@@ -423,15 +377,12 @@ label.right {
   line-height: 40px;
   margin-left: 24px;
 }
-
 .button.light:hover {
   border-color: #d0dae5;
 }
-
 .button.light:active, .button.light.nice-select.open, .button.light:focus {
   border-color: #88bfff;
 }
-
 @media screen and (max-width: 360px) {
   .button {
     width: 100%;
@@ -445,13 +396,11 @@ label.right {
   text-align: center;
   margin-bottom: 60px;
 }
-
 @media screen and (min-width: 600px) {
   .header {
     padding: 0 18px;
   }
 }
-
 .header p {
   color: #90a1b5;
   font-size: 18px;
@@ -461,7 +410,6 @@ label.right {
 .footer {
   text-align: center;
 }
-
 .footer p {
   margin-bottom: 90px;
 }
@@ -471,5 +419,4 @@ label.right {
   clear: both;
   font-size: 12px;
   margin-top: 90px;
-}
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
