--- a/KD/Views/Login/Login.cshtml
+++ b/KD/Views/Login/Login.cshtml
@@ -20,6 +20,11 @@
     <div class="main-login-wrapper">
 
         <div class="main-login-content">
+
+            <div class="main-login-translate">
+                <img src="~/Content/Assets/logo/flag-khmer.png"/>
+            </div>
+
             <div class="main-login-left">
                 <div class="image-login">
                     <img src="~/Content/Assets/Login/login.png" />
