--- a/KD/Views/Shared/_Header.cshtml
+++ b/KD/Views/Shared/_Header.cshtml
@@ -1,45 +1,63 @@
-﻿<div class="main-top-header" style="opacity:1;">
+﻿<div class="main-top-header">
     <div class="main-top-head-container">
-        <div class="left">
-            <button class="main-action-btn btn-collapsed-menu">
-                <i class="ri-menu-line"></i>
-            </button>
+        <div class="main-show-featur">
+            <text>Products</text>
         </div>
-        <div class="middle"></div>
-        <div class="right">
-            <div class="main-content-translate">
-                <div class="main-action-btn" id="btn_translate_languag">
-                    <i class="ri-translate"></i>
+        <div class="main-btn-action-header">
+            <div class="main-btn-size">
+                <div class="main-btn-translate">
+                    <img src="~/Content/Assets/logo/flag-khmer.png" />
                 </div>
+            </div>
+            <div class="main-btn-size">
+                <div class="main-btn-resize-screen">
+                    <img src="~/Content/Assets/icon/full-screen.png" />
+                </div>
+            </div>
+            <div class="main-btn-size">
+                <div class="main-btn-notification">
+                    <img src="~/Content/Assets/icon/notification.png" />
+                    <div class="main-box-has-notification"></div>
+                </div>
+            </div>
+            <div class="main-btn-size">
+                <div class="main-btn-profile">
+                    <img src="~/Content/Assets/logo/user.png" />
+                </div>
+            </div>
+            @*<div class="main-content-translate">
+            <div class="main-action-btn" id="btn_translate_languag">
+                <i class="ri-translate"></i>
+            </div>
 
-                <div class="main-dialog-translate">
-                    <div class="nav-languag" main-lang-code="kh">
-                        <div class="image-flag">
-                            <img src="~/Content/Assets/logo/flag-khmer.png" />
-                        </div>
-                        <div class="text-flag">ភាសាខ្មែរ</div>
+            <div class="main-dialog-translate">
+                <div class="nav-languag" main-lang-code="kh">
+                    <div class="image-flag">
+                        <img src="~/Content/Assets/logo/flag-khmer.png" />
                     </div>
-                    <div class="nav-languag" main-lang-code="en">
-                        <div class="image-flag">
-                            <img src="~/Content/Assets/logo/flag-english.png" />
-                        </div>
-                        <div class="text-flag">English</div>
+                    <div class="text-flag">ភាសាខ្មែរ</div>
+                </div>
+                <div class="nav-languag" main-lang-code="en">
+                    <div class="image-flag">
+                        <img src="~/Content/Assets/logo/flag-english.png" />
                     </div>
+                    <div class="text-flag">English</div>
                 </div>
             </div>
+        </div>*@
 
-            <div class="main-action-btn main-action-dark-mode" id="btn_main_dark_mode">
-                <i class="ri-sun-line"></i>
+            @*<div class="main-action-btn main-action-dark-mode" id="btn_main_dark_mode">
+            <i class="ri-sun-line"></i>
+        </div>
+
+        <div class="main-action-btn">
+            <div class="icon-notification">
+                <i class="ri-notification-line"></i>
+                <div class="show-notification"></div>
             </div>
+        </div>*@
 
-            <div class="main-action-btn">
-                <div class="icon-notification">
-                    <i class="ri-notification-line"></i>
-                    <div class="show-notification"></div>
-                </div>
-            </div>
-
-            <div class="main-content-profile">
+            @*<div class="main-content-profile">
                 <div class="main-profile" id="btn_profile">
                     <img src="~/Content/Assets/logo/profile.jpg" />
                 </div>
@@ -50,7 +68,7 @@
                     <div class="username">ADMIN KD</div>
                     <div class="buttom-logout">ចាកចេញ</div>
                 </div>
-            </div>
+            </div>*@
 
         </div>
     </div>
