--- a/KD/Views/Shared/_Layout.cshtml
+++ b/KD/Views/Shared/_Layout.cshtml
@@ -17,7 +17,9 @@
     <div class="main-wrapper" style="display:none;">
         @Html.Partial("_leftMenu")
         <div class="main-nav-right main_scroll_container_view">
+            @Html.Partial("_Header")
             @RenderBody()
+            @*<div class="main-space-footer"></div>*@
         </div>
         @RenderSection("modals", false)
     </div>
