--- a/KD/Content/Main/Login/Login.scss
+++ b/KD/Content/Main/Login/Login.scss
@@ -25,7 +25,7 @@ $main_focus_border_color :#4aaecf83;
     overflow: hidden;
     // background: rgb(2,0,36);
     // background: linear-gradient(145deg, rgba(2,0,36,1) 0%, #4caed1 0%, #d16f4c 100%);
-    background: #3094B6;
+    background: #235567;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -38,6 +38,35 @@ $main_focus_border_color :#4aaecf83;
         background: #fff;
         padding: 35px 80px;
         border-radius: 25px;
+        position: relative;
+
+        .main-login-translate{
+            transition: 0.25s ease-in-out;
+            position: absolute;
+            top: 35px;
+            left: 38px;
+            width: 24px;
+            height: 24px;
+            border-radius: 50%;
+            border: 2px solid #f2f2f2;
+            cursor: pointer;
+
+            &:hover{
+                border: 2px solid #99cfe0;
+            }
+
+
+            img{
+                width: 100%;
+                height: 100%;
+                border-radius: 50%;
+                padding: 2px;
+                transition: 0.15s ease-in-out;
+            }
+            &:active img{
+                transform: scale(0.5);
+            }
+        }
 
 
         .main-login-left {
