--- a/KD/Views/Shared/_leftMenu.cshtml
+++ b/KD/Views/Shared/_leftMenu.cshtml
@@ -2,7 +2,7 @@
 <div class="main-container-left-menu">
     <div class="mobile-backdrop btn_collaps_menu_js"></div>
     <nav class="main-nav-left-menu">
-        @*s Header*@
+        @*s header*@
         <div class="main-nav-header-logo">
             <a class="main-box-logo-left-menu" href="">
                 <div class="main-logo">
@@ -15,10 +15,10 @@
                 </div>
                 <div class="main-text-logo">D SOUND</div>
             </a>
-            <div class="btn-close-left-menu-when-mobile btn_collaps_menu_js"><i class="ri-close-fill"></i></div>
+            <div class="main-btn-collaps-menu"><i class="ri-arrow-left-s-line"></i></div>
         </div>
-        @*e Header*@
-        @*s Menu*@
+        @*e header*@
+        @*s sidebar menu*@
         <div class="main-container-menu-left-menu main-scroll-left-menu">
 
             <div href="/" class="main-btn-menu-left-menu main_btn_menu_left_menu_js" main-color-ripple="#43494f80" id="nav_department" main-tooltip-menu>
@@ -47,7 +47,6 @@
                 <span class="main-icon"><i class="ri-user-3-line"></i></span>
                 <span class="main-title">User</span>
             </div>
-
             @*<div href="/kd" class="main-btn-menu-left-menu main_btn_menu_left_menu_js" main-color-ripple="#43494f80" id="nav_speaker" main-tooltip-menu>
                     <span class="main-icon"><i class="ri-speaker-line"></i></span>
                     <span class="main-title">Speaker</span>
@@ -76,40 +75,45 @@
                     <span class="main-icon"><i class="ri-settings-line"></i></span>
                     <span class="main-title">Setting</span>
                 </div>*@
-
-
         </div>
-        @*e Menu*@
+        @*e sidebar menu*@
         @*s Profile*@
         <!--<div class="main-container-profile">
 
-            <div class="main-box-profile">
+        <div class="main-box-profile">
 
-                <div class="main-left-profile">
-                    <div class="maim-image-profile">
-                        <div class="main-background-profile">
-                            <img src="~/Content/Assets/logo/user.png" />
-                        </div>
+            <div class="main-left-profile">
+                <div class="maim-image-profile">
+                    <div class="main-background-profile">
+                        <img src="~/Content/Assets/logo/user.png" />
                     </div>
-                    <div class="main-text-profile">
-                        <div class="main-user-name">KOY DA</div>
-                        <div class="main-user-type">Admin</div>
-                    </div>
-                </div>-->
+                </div>
+                <div class="main-text-profile">
+                    <div class="main-user-name">KOY DA</div>
+                    <div class="main-user-type">Admin</div>
+                </div>
+            </div>-->
         @*<div class="main-btn-drop-action-menu-profile">
                 <img src="~/Content/Assets/icon/arrow-down.png" />
             </div>*@
-
         <!--</div>
-
         <div class="main-action-system">-->
         @*<div class="main-btn-system btn_collaps_menu_js" main-tooltip-menu><div class="main-icon"><i class="ri-layout-left-line"></i></div><div class="main-title">collaps menu</div></div>
             <div class="main-btn-system" main-tooltip-menu><div class="main-icon"><i class="ri-settings-line"></i></div><div class="main-title">Setting</div></div>*@
         <!--<div class="main-btn-system" main-tooltip-menu><div class="main-icon"><i class="ri-switch-line"></i></div><div class="main-title">Switch database</div></div>
                 <div class="main-btn-system" main-tooltip-menu><div class="main-icon"><i class="ri-shut-down-line"></i></div><div class="main-title">logout</div></div>
             </div>
-
         </div>-->
         @*e Profile*@
+
+        @*s menu defaul system*@
+        <div class="main-nav-menu-footer">
+            <div class="main-btn-menu-left-menu main_btn_menu_left_menu_js" main-color-ripple="#43494f80" id="" main-tooltip-menu>
+                <span class="main-icon"><i class="ri-settings-line"></i></span>
+                <span class="main-title">Setting</span>
+            </div>
+        </div>
+        @*e menu defaul system*@
+
     </nav>
 </div>
